--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <!--- Here goes the info for my resume-->
     <body>
        <h1> GABRIEL MEKULEYI </h1>
-       <img src="images/gabriel.jpg"/>
+       <img src="gabriel.jpg"/>
        <h1>Summary</h1>
        <p>I am an hardworking and self-motivated individual who is looking for a role in an Edtech Industry</p>
        <hr/>
